--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ s2v_old/key2row
 s2v_old/strings.json
 s2v_old/vectors
 ._s2v_old
+app/routers/v1/__pycache__/__init__.cpython-36.pyc
+app/routers/v1/__pycache__/faq.cpython-36.pyc
