--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,89 @@
-fastapi
-uvicorn
-nltk
-spacy
-git+https://github.com/boudinfl/pke.git
+absl-py==1.0.0
+anyio==3.3.4
+asgiref==3.4.1
+blis==0.4.1
+boto3==1.14.40
+botocore==1.17.63
+cachetools==4.2.4
+catalogue==1.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
+click==8.0.3
+contextlib2==21.6.0
+contextvars==2.4
+cymem==2.0.6
+Cython==0.29.24
+dataclasses==0.8
+decorator==5.1.0
+docutils==0.15.2
+en-core-web-sm==2.2.5
+fastapi==0.70.0
+filelock==3.4.0
+flashtext==2.7
+future==0.18.2
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+grpcio==1.42.0
+h11==0.12.0
+idna==3.3
+immutables==0.16
+importlib-metadata==4.8.2
+jmespath==0.10.0
+joblib==0.14.1
+Markdown==3.3.6
+murmurhash==1.0.6
+networkx==2.4
+nltk==3.6.5
+numpy==1.19.5
+oauthlib==3.1.1
+packaging==21.3
+pandas==1.1.5
+pke==1.8.1
+pkg-resources==0.0.0
+plac==1.1.3
+preshed==3.0.6
+protobuf==3.19.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pydantic==1.8.2
+pyparsing==3.0.6
+python-dateutil==2.8.1
+python-dotenv==0.19.2
+pytorch-lightning==0.8.1
+pytz==2020.1
+PyYAML==6.0
+regex==2021.11.10
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+s3transfer==0.3.7
+sacremoses==0.0.46
+scikit-learn==0.24.2
+scipy==1.5.4
+sense2vec==1.0.3
+sentencepiece==0.1.83
+six==1.15.0
+sklearn==0.0
+sniffio==1.2.0
+spacy==2.2.4
+srsly==1.0.5
+starlette==0.16.0
+strsim==0.0.3
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+thinc==7.4.0
+threadpoolctl==3.0.0
+tokenizers==0.8.1rc1
+torch==1.9.0
+tqdm==4.62.3
+transformers==3.0.2
+typing-extensions==4.0.0
+Unidecode==1.1.1
+urllib3==1.25.11
+uvicorn==0.15.0
+wasabi==0.8.2
+Werkzeug==2.0.2
+zipp==3.6.0
 git+https://github.com/ramsrigouthamg/Questgen.ai
+git+https://github.com/boudinfl/pke.git
